🐛 people pick z-index error fixed

--- a/pages/peoplePick/peoplePick.module.css
+++ b/pages/peoplePick/peoplePick.module.css
@@ -107,7 +107,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 2px;
-  z-index: 100000;
+  z-index: 1;
 }
 .rankText {
   font-weight: 900;
